loading button and soft keyboard handling added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
 
+    // Loading button
+    implementation 'br.com.simplepass:loading-button-android:1.14.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
