--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     // Loading button
     implementation 'br.com.simplepass:loading-button-android:1.14.0'
 
+    // Facebook button
+    implementation 'com.github.medyo:fancybuttons:1.9.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
