--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.luzkan.mememate"
-        minSdkVersion 26
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.9'
 
     // Firebase - authentication
-    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    //implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
 
     //Firebase - firestore
     implementation 'com.google.firebase:firebase-firestore:17.1.1'
@@ -57,6 +57,8 @@ dependencies {
     // Firebase - facebook authentication
     implementation 'com.facebook.android:facebook-android-sdk:4.41.0'
 
+    // Firebase - storage
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
     // Room
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
