--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <!--<activity-->
+            <!--android:name=".activity.profile.FullMemeActivity"-->
+            <!--android:label="@string/title_activity_full_meme"-->
+            <!--android:theme="@style/AppTheme.NoActionBar"></activity>-->
         <activity
-            android:name=".activity.profile.FullMemeActivity"
-            android:label="@string/title_activity_full_meme"
+            android:name=".activity.top.TopActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".activity.profile.ProfileActivity"
