--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,20 +18,13 @@
             <!--android:label="@string/title_activity_full_meme"-->
             <!--android:theme="@style/AppTheme.NoActionBar"></activity>-->
         <activity
-            android:name=".activity.top.TopActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity
-            android:name=".activity.profile.ProfileActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"/>
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.MAIN" />-->
 
                 <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
-        <activity android:name=".MemeAdding"/>
         <activity
             android:name=".activity.login.RegisterActivity"
             android:windowSoftInputMode="adjustPan">
