--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,19 +21,13 @@
                 </category>
             </intent-filter>
         </activity>
-        <!-- <activity -->
-        <!-- android:name=".activity.profile.FullMemeActivity" -->
-        <!-- android:label="@string/title_activity_full_meme" -->
-        <!-- android:theme="@style/AppTheme.NoActionBar"></activity> -->
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" /> <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.MAIN" /> -->
-        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-        <!-- </intent-filter> -->
+            android:screenOrientation="portrait" />
+
         <activity
-            android:name=".activity.login.RegisterActivity"
+            android:name=".activity.RegisterAndLoginActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
